# guide

./: .ghci  .gitignore  .gitlab-ci.yml  .hlint.yaml  .mergify.yml  .travis.yml  INSTALL.md  LICENSE  Makefile  README.md  Setup.hs  b  guide.cabal  hslib.cabal  hslibs.cabal  official.sh  shell.nix  stack.yaml  start.sh  travis_key.enc  zurihac.md
REPL/: .gitignore  README.md  index-project.cabal
REPL/app/: Main.hs
REPL/src/: AllCommands.hs  ArchiveUpdate.hs  Common.hs  FileUtils.hs  HackageArchive.hs  HackageCommands.hs  HackageUpdate.hs  HttpDownload.hs  IndexProject.hs  PackageManager.hs  REPL.hs  Stackage.hs  StackageArchive.hs  StackageCommands.hs  StackageUpdate.hs  Storage.hs  TarUtil.hs
REPL/test/: Spec.hs
REPL/testworkdir/: sometestfile.cnf  sometestfile2.cnf  sometestfile3.cnf
back/: .hlint.yaml  LICENSE  Setup.hs  buildjs.sh  guide.cabal  package.yaml  stack.yaml  swagger.json
back/benchmarks/: Main.hs
back/guidejs/: .babelrc  package.json  rollup.config.js
back/guidejs/src/: csrfProtection.js  index.js
back/src/: Imports.hs  To.hs
back/src/Guide/: Api.hs  App.hs  Archival.hs  Cli.hs  Config.hs  Database.hs  Db.hs  Diff.hs  Handlers.hs  JS.hs  Logger.hs  Main.hs  Markdown.hs  Matomo.hs  Routes.hs  Search.hs  ServerStuff.hs  Session.hs  State.hs  Types.hs  Uid.hs  Utils.hs  Views.hs
back/src/Guide/Api/: Docs.hs  Error.hs  Guider.hs  Logger.hs  Matomo.hs  Methods.hs  Migration.hs  Server.hs  Types.hs  Utils.hs
back/src/Guide/Database/: Add.hs  Connection.hs  Convert.hs  Get.hs  Import.hs  Migration.hs  Schema.hs  Set.hs  Types.hs  Utils.hs
back/src/Guide/Database/Queries/: Delete.hs  Insert.hs  Select.hs  Update.hs
back/src/Guide/Db/: Connection.hs  Get.hs  Schema.hs
back/src/Guide/Diff/: Merge.hs  Tokenize.hs
back/src/Guide/Logger/: Functions.hs  Init.hs  Methods.hs  Run.hs  Types.hs
back/src/Guide/Types/: Action.hs  Analytics.hs  Core.hs  Edit.hs  Hue.hs  Session.hs  User.hs
back/src/Guide/Views/: Auth.hs  Category.hs  Item.hs  Page.hs  Utils.hs
back/src/Guide/Views/Auth/: Login.hs  Register.hs
back/src/Guide/Views/Utils/: Input.hs
back/src/site/: Main.hs
back/static/: admin.css  item-notes-template.md  license.md  loader.css  markup.css
back/static/components/: .eslintrc.js  AEditor.js  CategoryItemDescription.js  CategoryItemInfo.js
back/static/js/: bundle.js  bundle.js.map
back/templates/: item-description.widget  item-info.widget  item-title.widget  search.widget
back/templates/utils/: editors.widget  space.widget
back/tests/: Api.hs  ApiSpec.hs  LogSpec.hs  Main.hs  MarkdownSpec.hs  MergeSpec.hs  Selenium.hs  WebSpec.hs
docker/back/: Dockerfile
docker/front/: Dockerfile
favicon/: gen.hs  gen.sh
front/: .babelrc  README.md  babel.config.js  config.js  config.json  index.d.ts  index.html  package-lock.json  package.json  postcss.config.js  prod.tsconfig.json  server.js  server.ts  tsconfig.json  tslint.json
front-ps/: .gitignore  README.md  bower.json  bower_resolutions.txt  package.json  server.js  webpack.config.client.js  webpack.config.common.js  webpack.config.server.js
front-ps/client/: shared.js
front-ps/common/: shared.js  vendor.scss
front-ps/common/Guide/: Types.purs
front-ps/pages/category-detail/: Main.purs
front-ps/pages/category-overview/: Main.purs
front-ps/public/views/: header.ejs  layout.ejs
front-ps/server/: Main.purs  entry.js
front-ps/src/: Client.purs  Server.purs  common.js  index.client.js  index.server.js
front-ps/src/App/: Config.js  Events.purs  Routes.purs  State.purs
front-ps/src/Guide/: Config.js  Config.purs  Events.purs  Routes.purs  State.purs  Types.purs  Update.purs
front-ps/support/: client.entry.js  server.entry.js
front/assets/: App.vue  app.js  entry-client.js  index.template.html
front/client/: App.vue  app.ts  entry.client.ts  entry.server.ts
front/client/api/: index.ts
front/client/components/: AFooter.vue  ALink.vue  AddCategoryBtn.vue  AddCategoryDialog.vue  AddItemDialog.vue  Article.vue  ArticleContent.vue  Categories.vue  CategoriesCategoryLink.vue  Category.vue  CategoryDescription.vue  CategoryHeader.vue  CategoryHeaderBtn.vue  CategoryInfo.vue  (+20 more)
front/components/: Vuetify.vue  _index.js
front/config/: webpack.config.dev.js  webpack.config.prod.js
front/mixins/: meta.js
front/pages/: InspireView.vue  WelcomeView.vue
front/router/: index.js  meta.json
front/server/: bin.js  config.json  ssr.config.js  ssr.dev.js  ssr.prod.js  template.html
front/src/: App.js  index.css  index.js  markup.css  types.js
front/store/: index.js
front/tests/: config.tests.js  index.ts  models.js  testFunctions.js  tests.js  utils.js
front/types/: index.d.ts
front/utils/: DeferredPromise.ts
guidejs/: README.md  package-lock.json  package.json
lib/: Cache.hs  Config.hs  Guide.hs  Imports.hs  JS.hs  Markdown.hs  Merge.hs  SafeCopy.hs  Types.hs  Utils.hs  View.hs
scripts/: buildjs.sh  ci-functions.sh  official.sh  test-official.sh
src/: Cache.hs  Config.hs  Imports.hs  JS.hs  Main.hs  Markdown.hs  Merge.hs  SampleState.hs  To.hs  Types.hs  Utils.hs  View.hs
src/Guide/: Api.hs  App.hs  Archival.hs  Auth.hs  Cache.hs  Config.hs  Diff.hs  Handlers.hs  JS.hs  Main.hs  Markdown.hs  Merge.hs  Routes.hs  SafeCopy.hs  Search.hs  Server.hs  ServerStuff.hs  Session.hs  State.hs  Types.hs  Utils.hs  View.hs  Views.hs
src/Snippets/: Parser.hs  Renderer.hs
src/purescript/: Main.hs
src/site/: Main.hs
static/: admin.css  category-notes-template.md  css.css  donate.html  help.md  item-notes-template.md  js.js  markdown.md  markup.css  snippetTabs.js  snippets.css  tracking.html  unwritten-rules.md
static/components/: CategoryItem.js  CategoryItemInfo.js
static/js/: bundle.js  bundle.js.map
templates/: admin-css.widget  css.widget  item-description.widget  item-info.widget  item-title.widget  search.widget  trait.widget
templates/utils/: editors.widget  img-button.widget  img-controls.widget
tests/: Main.hs  MarkdownSpec.hs  MdTablesSpec.hs  MergeSpec.hs  MultipleSnippetsExample.md  Selenium.hs  SnippetsExample.md  WebSpec.hs
(+152 files in other folders)
