name:                guide
version:             0.1.0.0
synopsis:            A site for comparing Haskell libraries
description:
  A site for comparing Haskell libraries
homepage:            http://github.com/aelve/guide
bug-reports:         http://github.com/aelve/guide/issues
license:             BSD3
license-file:        LICENSE
author:              Artyom
maintainer:          yom@artyom.me
-- copyright:           
category:            Web
tested-with:         GHC == 8.0.1
build-type:          Simple
extra-source-files:
  CHANGELOG.md
-- Whatever, this won't ever be installed from a .tar package anyway so I
-- won't bother updating this section every time I add a new directory.
--
-- data-files:
--   static/*.svg
--   static/*.css
--   static/*.md
--   static/*.html
--   static/*.js
--   static/*.ico
--   templates/*.widget
--   templates/utils/*.widget
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/aelve/guide.git

executable guide
  main-is:             Main.hs
  build-depends:       base
                     , guide
  ghc-options:         -Wall -fno-warn-unused-do-bind
                       -threaded "-with-rtsopts=-T -N"
  hs-source-dirs:      src/site
  default-language:    Haskell2010

library
  exposed-modules:
    Guide.Server
    Guide.ServerStuff
    Guide.Config
    Guide.State
    Guide.Types
      Guide.Types.Hue
      Guide.Types.Core
      Guide.Types.Edit
      Guide.Types.Action
    Guide.Handlers
    Guide.Utils
    Guide.Merge
    Guide.Cache
    Guide.Markdown
    Guide.JS
    Guide.View
    Guide.SafeCopy
  other-modules:
    Imports
  build-depends:       Spock
                     , Spock-lucid == 0.3.*
                     , acid-state == 0.14.*
                     , aeson == 0.11.*
                     , aeson-pretty
                     , base >=4.9 && <4.10
                     , base-prelude
                     , bytestring
                     , cereal
                     , cmark == 0.5.*
                     , cmark-highlight == 0.2.*
                     , cmark-sections == 0.1.*
                     , containers >= 0.5
                     , data-default >= 0.5
                     , deepseq >= 1.2.0.0
                     , directory >= 1.2
                     , ekg
                     , ekg-core
                     , exceptions
                     , extra
                     , feed >= 0.3.11 && < 0.4
                     , filemanip == 0.3.6.*
                     , filepath
                     , focus
                     , friendly-time == 0.4.*
                     , fsnotify == 0.2.*
                     , hashable
                     , haskell-src-meta
                     , http-types
                     , ilist
                     , iproute == 1.7.*
                     , lucid >= 2.9.5 && < 3
                     , megaparsec == 5.0.*
                     , microlens-platform >= 0.3.2
                     , mmorph == 1.*
                     , mtl >= 2.1.1
                     , neat-interpolation == 0.3.*
                     , network
                     , patches-vector
                     , path-pieces
                     , random >= 1.1
                     , reroute
                     , safecopy
                     , semigroups
                     , shortcut-links >= 0.4.2
                     , slave-thread
                     , split
                     , stache-plus == 0.1.*
                     , stm-containers >= 0.2.14 && < 0.3
                     , template-haskell
                     , text-all == 0.3.*
                     , time >= 1.5
                     , transformers
                     , uniplate
                     , vector
                     , wai
                     , wai-middleware-metrics
                     , wai-middleware-static
                     , xml
                     , xss-sanitize
  ghc-options:         -Wall -fno-warn-unused-do-bind
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  MultiWayIf
                     , ViewPatterns
                     , RecordWildCards
                     , TupleSections
                     , LambdaCase
                     , RankNTypes
                     , MultiParamTypeClasses
                     , FunctionalDependencies
                     , TemplateHaskell
                     , DeriveFunctor
                     , DeriveTraversable
                     , DeriveGeneric
                     , NoImplicitPrelude

test-suite tests
  main-is:             Main.hs
  other-modules:       WebSpec
                       MarkdownSpec
                       MergeSpec
                       Selenium
  type:                exitcode-stdio-1.0
  build-depends:       QuickCheck < 2.9
                     , base < 5
                     , base-prelude
                     , cmark
                     , cmark-sections
                     , containers
                     , directory
                     , exceptions
                     , guide
                     , hspec < 3
                     , hspec-expectations
                     , hspec-webdriver < 1.3
                     , lucid < 3
                     , microlens-platform < 0.4
                     , monad-loops < 0.5
                     , network-uri
                     , quickcheck-text < 0.2
                     , slave-thread
                     , tagsoup < 1
                     , text-all < 0.4
                     , transformers
                     , webdriver >= 0.8.4 && < 0.9
  hs-source-dirs:      tests
  default-language:    Haskell2010
  ghc-options:         -Wall -fno-warn-unused-do-bind
  default-extensions:  MultiWayIf
                     , ViewPatterns
                     , RecordWildCards
                     , TupleSections
                     , LambdaCase
                     , RankNTypes
                     , MultiParamTypeClasses
                     , FunctionalDependencies
                     , TemplateHaskell
                     , DeriveFunctor
                     , DeriveTraversable
                     , DeriveGeneric
