name:                hslibs
version:             0.1.0.0
synopsis:            A site for comparing Haskell libraries
description:
  A site for comparing Haskell libraries
homepage:            http://github.com/aelve/hslibs
bug-reports:         http://github.com/aelve/hslibs/issues
license:             BSD3
license-file:        LICENSE
author:              Artyom
maintainer:          yom@artyom.me
-- copyright:           
category:            Web
tested-with:         GHC == 7.10.3
build-type:          Simple
extra-source-files:
  CHANGELOG.md
  static/*.js
cabal-version:       >=1.10

source-repository head
  type:                git
  location:            git://github.com/aelve/hslibs.git

executable hslibs
  main-is:             Main.hs
  -- other-modules:       
  -- other-extensions:    
  build-depends:       Spock
                     , base >=4.8 && <4.9
                     , base-prelude
                     , lucid
                     , microlens-platform >= 0.2.3
                     , mtl
                     , neat-interpolation == 0.3.*
                     , random >= 1.1
                     , text
                     , text-format
                     , transformers
                     , wai-middleware-static
  ghc-options:         -Wall -fno-warn-unused-do-bind
  hs-source-dirs:      src
  default-language:    Haskell2010
