name:                index-project
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/index-project#readme
license:             BSD3
license-file:        LICENSE
author:              Boris Yartsev
maintainer:          borboss@gmail.com
copyright:           Boris Yartsev
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  other-modules:     FileUtils, HttpDownload, HackageUpdate, StackageUpdate
                     
  exposed-modules:   Common
                     , REPL
                     , HackageArchive, StackageArchive
                     , HackageCommands, StackageCommands
                     , AllCommands
                     , PackageManager

  build-depends:       base >= 4.7 && < 5
                     , directory
                     , containers
                     , tar
                     , split
                     , http-types
                     , bytestring
                     , Cabal
                     , http-client
                     , filepath
                     , http-client-tls
                     , utf8-string
                     , pureMD5
                     , aeson
                     , yaml
                     , data-default
                     , megaparsec
                     , text
                     , mtl
                     , safecopy
                     , cereal
                     , unix
                     , exceptions
                     , transformers
                     , zlib
                     , acid-state
                     , unordered-containers

  default-language:    Haskell2010

executable index-project-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , index-project
                     , containers
                     , tar
                     , bytestring
                     , http-client
                     , directory
                     , data-default

  default-language:    Haskell2010

test-suite index-project-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , index-project
                     , tasty
                     , tasty-hunit
                     , megaparsec
                     , text
                     , filepath
                     
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/index-project
