name:                guide
version:             1.0
synopsis:            An advanced wiki engine
description:
  An advanced wiki engine powering <guide.aelve.com>.
homepage:            http://github.com/aelve/guide
bug-reports:         http://github.com/aelve/guide/issues
license:             BSD3
license-file:        LICENSE
author:              Aelve
maintainer:          yom@artyom.me
-- copyright:
category:            Web
tested-with:         GHC == 8.4
extra-source-files:
-- Whatever, this won't ever be installed from a .tar package anyway so I
-- won't bother updating this section every time I add a new directory.
--
-- data-files:
--   static/*.svg
--   static/*.css
--   static/*.md
--   static/*.html
--   static/*.js
--   static/*.ico
--   templates/*.widget
--   templates/utils/*.widget
cabal-version:       >=1.24
build-type:          Custom

source-repository head
  type:                git
  location:            git://github.com/aelve/guide.git

custom-setup
  setup-depends:       base
                     , process
                     , Cabal

executable guide
  main-is:             Main.hs
  build-depends:       base
                     , guide
  ghc-options:         -Wall -Wno-unused-do-bind -Wmissing-export-lists
                       -threaded "-with-rtsopts=-T -N"
  hs-source-dirs:      src/site
  default-language:    Haskell2010

library
  exposed-modules:
    Guide.App
    Guide.Api
      Guide.Api.Methods
      Guide.Api.Server
      Guide.Api.Types
      Guide.Api.Error
      Guide.Api.Utils
      Guide.Api.Guider
    Guide.Logger
      Guide.Logger.Types
      Guide.Logger.Functions
      Guide.Logger.Run
    Guide.Main
    Guide.ServerStuff
    Guide.Session
    Guide.Config
    Guide.State
    Guide.Types
      Guide.Types.Hue
      Guide.Types.Core
      Guide.Types.Edit
      Guide.Types.Action
      Guide.Types.User
      Guide.Types.Session
    Guide.Handlers
    Guide.Utils
    Guide.Diff
      Guide.Diff.Tokenize
      Guide.Diff.Merge
    Guide.Markdown
    Guide.Matomo
    Guide.Archival
    Guide.Search
    Guide.JS
    Guide.Views
      Guide.Views.Page
      Guide.Views.Auth
        Guide.Views.Auth.Register
        Guide.Views.Auth.Login
      Guide.Views.Item
      Guide.Views.Category
      Guide.Views.Utils
        Guide.Views.Utils.Input
    Guide.Routes
  other-modules:
    Imports
    To
  build-depends:       Spock
                     , Spock-digestive
                     , Spock-lucid
                     , acid-state
                     , aeson
                     , aeson-pretty
                     , async
                     , base < 5
                     , base-prelude
                     , bytestring
                     , cereal
                     , cmark == 0.5.*
                     , cmark-highlight == 0.2.*
                     , cmark-sections == 0.3.*
                     , containers >= 0.5
                     , data-default >= 0.5
                     , deepseq >= 1.2.0.0
                     , digestive-functors
                     , directory >= 1.2
                     , di
                     , di-monad
                     , di-core
                     , df1
                     , ekg
                     , ekg-core
                     , exceptions
                     , extra
                     , feed == 1.0.*
                     , filemanip == 0.3.6.*
                     , filepath
                     , fmt
                     , focus
                     , friendly-time == 0.4.*
                     , hashable
                     , haskell-src-meta
                     , http-api-data
                     , http-client
                     , http-client-tls
                     , http-types
                     , hvect
                     , ilist
                     , iproute == 1.7.*
                     , lucid >= 2.9.5 && < 3
                     , megaparsec == 6.*
                     , microlens-platform >= 0.3.2
                     , mmorph == 1.*
                     , mtl >= 2.1.1
                     , neat-interpolation == 0.3.*
                     , network
                     , network-uri
                     , patches-vector
                     , random >= 1.1
                     , reroute
                     , safe
                     , safecopy
                     , safecopy-migrate == 0.2.*
                     , say
                     , scrypt
                     , servant
                     , servant-server
                     , servant-swagger
                     , servant-swagger-ui
                     , swagger2
                     , shortcut-links >= 0.4.2
                     , slave-thread
                     , split
                     , stache-plus == 0.1.*
                     , stm
                     , stm-containers >= 0.2.14 && < 0.3
                     , template-haskell
                     , text
                     , time >= 1.5
                     , transformers
                     , uniplate
                     , signal
                     , utf8-string
                     , vector
                     , wai
                     , wai-middleware-metrics
                     , wai-middleware-static
                     , wai-cors
                     , warp
                     , xml-conduit
                     , xml-types
                     , xss-sanitize
  ghc-options:         -Wall -Wno-unused-do-bind -Wmissing-export-lists
  hs-source-dirs:      src
  default-language:    Haskell2010
  default-extensions:  MultiWayIf
                     , ViewPatterns
                     , RecordWildCards
                     , TupleSections
                     , LambdaCase
                     , RankNTypes
                     , MultiParamTypeClasses
                     , FunctionalDependencies
                     , TemplateHaskell
                     , DeriveFunctor
                     , DeriveTraversable
                     , DeriveGeneric
                     , TypeApplications
                     , NoImplicitPrelude
                     , ConstraintKinds
                     , InstanceSigs
                     , DerivingStrategies

test-suite tests
  main-is:             Main.hs
  other-modules:
    ApiSpec
    LogSpec
    MarkdownSpec
    MergeSpec
    Selenium
    WebSpec
  type:                exitcode-stdio-1.0
  build-depends:       QuickCheck < 3
                     , aeson
                     , async
                     , base < 5
                     , bytestring
                     , base-prelude
                     , cmark
                     , cmark-sections
                     , containers
                     , directory
                     , exceptions
                     , guide
                     , hspec < 3
                     , hspec-expectations
                     , hspec-webdriver < 1.3
                     , http-client
                     , http-conduit
                     , http-types
                     , lucid < 3
                     , microlens-platform < 0.4
                     , monad-loops < 0.5
                     , network-uri
                     , quickcheck-text < 0.2
                     , regex
                     , slave-thread
                     , tagsoup < 1
                     , text
                     , temporary
                     , transformers
                     , webdriver >= 0.8.4 && < 0.9
                     , yaml
  hs-source-dirs:      tests
  default-language:    Haskell2010
  ghc-options:         -Wall -Wno-unused-do-bind -Wmissing-export-lists
  default-extensions:  MultiWayIf
                     , ViewPatterns
                     , RecordWildCards
                     , TupleSections
                     , LambdaCase
                     , RankNTypes
                     , MultiParamTypeClasses
                     , FunctionalDependencies
                     , TemplateHaskell
                     , DeriveFunctor
                     , DeriveTraversable
                     , DeriveGeneric
